--- a/src/global.css
+++ b/src/global.css
@@ -21,3 +21,288 @@ h1 {
     font-size: 2em;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+/* ==========================================================================
+   Component: Panel
+ ============================================================================ */
+.am-panel {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 0;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+/* Panel header */
+.am-panel-hd {
+    font-size: 16px;
+    padding: 3px 10px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
+
+/* Panel content */
+.am-panel-bd {
+    padding: 5px 10px;
+}
+
+.am-panel-title {
+    margin: 0;
+    font-size: 100%;
+    color: inherit;
+}
+
+.am-panel-title>a {
+    color: inherit;
+}
+
+/* Panel footer */
+.am-panel-footer {
+    padding: 0.6rem 1.25rem;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.am-panel-default {
+    border-color: #ddd;
+}
+
+.am-panel-default>.am-panel-hd {
+    color: #444;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+
+.am-panel-default>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #ddd;
+}
+
+.am-panel-default>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #ddd;
+}
+
+.am-panel-primary {
+    border-color: #10a0ea;
+}
+
+.am-panel-primary>.am-panel-hd {
+    color: #fff;
+    background-color: #0e90d2;
+    border-color: #10a0ea;
+}
+
+.am-panel-primary>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #10a0ea;
+}
+
+.am-panel-primary>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #10a0ea;
+}
+
+.am-panel-secondary {
+    border-color: #caebfb;
+}
+
+.am-panel-secondary>.am-panel-hd {
+    color: #14a6ef;
+    background-color: rgba(59, 180, 242, 0.15);
+    border-color: #caebfb;
+}
+
+.am-panel-secondary>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #caebfb;
+}
+
+.am-panel-secondary>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #caebfb;
+}
+
+.am-panel-success {
+    border-color: #c9e7c9;
+}
+
+.am-panel-success>.am-panel-hd {
+    color: #5eb95e;
+    background-color: rgba(94, 185, 94, 0.15);
+    border-color: #c9e7c9;
+}
+
+.am-panel-success>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #c9e7c9;
+}
+
+.am-panel-success>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #c9e7c9;
+}
+
+.am-panel-warning {
+    border-color: #fbd0ae;
+}
+
+.am-panel-warning>.am-panel-hd {
+    color: #F37B1D;
+    background-color: rgba(243, 123, 29, 0.15);
+    border-color: #fbd0ae;
+}
+
+.am-panel-warning>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #fbd0ae;
+}
+
+.am-panel-warning>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #fbd0ae;
+}
+
+.am-panel-danger {
+    border-color: #f5cecd;
+}
+
+.am-panel-danger>.am-panel-hd {
+    color: #dd514c;
+    background-color: rgba(221, 81, 76, 0.15);
+    border-color: #f5cecd;
+}
+
+.am-panel-danger>.am-panel-hd+.am-panel-collapse>.am-panel-bd {
+    border-top-color: #f5cecd;
+}
+
+.am-panel-danger>.am-panel-footer+.am-panel-collapse>.am-panel-bd {
+    border-bottom-color: #f5cecd;
+}
+
+.am-panel>.am-table {
+    margin-bottom: 0;
+}
+
+.am-panel>.am-table:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
+
+.am-panel>.am-table:first-child>thead:first-child>tr:first-child td:first-child,
+.am-panel>.am-table:first-child>tbody:first-child>tr:first-child td:first-child,
+.am-panel>.am-table:first-child>thead:first-child>tr:first-child th:first-child,
+.am-panel>.am-table:first-child>tbody:first-child>tr:first-child th:first-child {
+    border-top-left-radius: 0;
+}
+
+.am-panel>.am-table:first-child>thead:first-child>tr:first-child td:last-child,
+.am-panel>.am-table:first-child>tbody:first-child>tr:first-child td:last-child,
+.am-panel>.am-table:first-child>thead:first-child>tr:first-child th:last-child,
+.am-panel>.am-table:first-child>tbody:first-child>tr:first-child th:last-child {
+    border-top-right-radius: 0;
+}
+
+.am-panel>.am-table:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.am-panel>.am-table:last-child>tbody:last-child>tr:last-child td:first-child,
+.am-panel>.am-table:last-child>tfoot:last-child>tr:last-child td:first-child,
+.am-panel>.am-table:last-child>tbody:last-child>tr:last-child th:first-child,
+.am-panel>.am-table:last-child>tfoot:last-child>tr:last-child th:first-child {
+    border-bottom-left-radius: 0;
+}
+
+.am-panel>.am-table:last-child>tbody:last-child>tr:last-child td:last-child,
+.am-panel>.am-table:last-child>tfoot:last-child>tr:last-child td:last-child,
+.am-panel>.am-table:last-child>tbody:last-child>tr:last-child th:last-child,
+.am-panel>.am-table:last-child>tfoot:last-child>tr:last-child th:last-child {
+    border-bottom-right-radius: 0;
+}
+
+.am-panel>.am-panel-bd+.am-table {
+    border-top: 1px solid #ddd;
+}
+
+.am-panel>.am-table>tbody:first-child>tr:first-child th,
+.am-panel>.am-table>tbody:first-child>tr:first-child td {
+    border-top: 0;
+}
+
+.am-panel>.am-table-bd {
+    border: 0;
+}
+
+.am-panel>.am-table-bd>thead>tr>th:first-child,
+.am-panel>.am-table-bd>tbody>tr>th:first-child,
+.am-panel>.am-table-bd>tfoot>tr>th:first-child,
+.am-panel>.am-table-bd>thead>tr>td:first-child,
+.am-panel>.am-table-bd>tbody>tr>td:first-child,
+.am-panel>.am-table-bd>tfoot>tr>td:first-child {
+    border-left: 0;
+}
+
+.am-panel>.am-table-bd>thead>tr>th:last-child,
+.am-panel>.am-table-bd>tbody>tr>th:last-child,
+.am-panel>.am-table-bd>tfoot>tr>th:last-child,
+.am-panel>.am-table-bd>thead>tr>td:last-child,
+.am-panel>.am-table-bd>tbody>tr>td:last-child,
+.am-panel>.am-table-bd>tfoot>tr>td:last-child {
+    border-right: 0;
+}
+
+.am-panel>.am-table-bd>thead>tr:first-child>td,
+.am-panel>.am-table-bd>tbody>tr:first-child>td,
+.am-panel>.am-table-bd>thead>tr:first-child>th,
+.am-panel>.am-table-bd>tbody>tr:first-child>th {
+    border-bottom: 0;
+}
+
+.am-panel>.am-table-bd>tbody>tr:last-child>td,
+.am-panel>.am-table-bd>tfoot>tr:last-child>td,
+.am-panel>.am-table-bd>tbody>tr:last-child>th,
+.am-panel>.am-table-bd>tfoot>tr:last-child>th {
+    border-bottom: 0;
+}
+
+/* Wrap list */
+.am-panel>.am-list {
+    margin: 0;
+}
+
+.am-panel>.am-list>li>a {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.am-panel>.am-list-static li {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+/* Panel group */
+.am-panel-group {
+    margin-bottom: 2rem;
+}
+
+.am-panel-group .am-panel {
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+.am-panel-group .am-panel+.am-panel {
+    margin-top: 6px;
+}
+
+.am-panel-group .am-panel-hd {
+    border-bottom: 0;
+}
+
+.am-panel-group .am-panel-hd+.am-panel-collapse .am-panel-bd {
+    border-top: 1px solid #ddd;
+}
+
+.am-panel-group .am-panel-footer {
+    border-top: 0;
+}
+
+.am-panel-group .am-panel-footer+.am-panel-collapse .am-panel-bd {
+    border-bottom: 1px solid #ddd;
+}
