fix: modify analytics

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charSet="utf-8" />
-    <title>Codeforces Analyze</title>
+    <title>Codeforces Analytics</title>
     <meta name="keywords" content="codeforces, analyze" />
     <meta
       name="description"
